Add Bootstrap styling

--- a/index.html
+++ b/index.html
@@ -16,23 +16,27 @@
     </script>
 </head>
 
-<body>
-    <h1>Spec-Up-T Starterpack</h1>
-    <button onclick="runScript('edit')">Edit</button>
-    <button onclick="runScript('render')">Render</button>
-    <button onclick="runScript('dev')">Dev</button>
-    <button onclick="runScript('collectExternalReferencesCache')">Collect External References (Cache)</button>
-    <button onclick="runScript('collectExternalReferencesNoCache')">Collect External References (No Cache)</button>
-    <button onclick="runScript('topdf')">To PDF</button>
-    <button onclick="runScript('freeze')">Freeze</button>
-    <button onclick="runScript('references')">References</button>
-    <button onclick="runScript('help')">Help</button>
-    <button onclick="runScript('menu')">Menu</button>
-    <button onclick="runScript('addremovexrefsource')">Add/Remove XRef Source</button>
-    <button onclick="runScript('configure')">Configure</button>
-    <button onclick="runScript('custom-update')">Custom Update</button>
-    <button onclick="runScript('start')">Start</button>
-    <button onclick="runScript('build')">Build</button>
+<body class="container mt-5">
+    <h1 class="mb-4">Spec-Up-T Starterpack</h1>
+    <div class="">
+        <button class="btn btn-primary" onclick="runScript('edit')">Edit</button>
+        <button class="btn btn-secondary" onclick="runScript('render')">Render</button>
+        <button class="btn btn-success" onclick="runScript('dev')">Dev</button>
+        <button class="btn btn-info" onclick="runScript('collectExternalReferencesCache')">Collect External References
+            (Cache)</button>
+        <button class="btn btn-warning" onclick="runScript('collectExternalReferencesNoCache')">Collect External
+            References (No Cache)</button>
+        <button class="btn btn-danger" onclick="runScript('topdf')">To PDF</button>
+        <button class="btn btn-dark" onclick="runScript('freeze')">Freeze</button>
+        <button class="btn btn-light" onclick="runScript('references')">References</button>
+        <button class="btn btn-primary" onclick="runScript('help')">Help</button>
+        <button class="btn btn-secondary" onclick="runScript('menu')">Menu</button>
+        <button class="btn btn-success" onclick="runScript('addremovexrefsource')">Add/Remove XRef Source</button>
+        <button class="btn btn-info" onclick="runScript('configure')">Configure</button>
+        <button class="btn btn-warning" onclick="runScript('custom-update')">Custom Update</button>
+        <button class="btn btn-danger" onclick="runScript('start')">Start</button>
+        <button class="btn btn-dark" onclick="runScript('build')">Build</button>
+    </div>
 </body>
 
 </html>
